# Zebra_Fish_Detection_Tracking

./: Makefile  README.md  pyproject.toml
notebooks/1.0-chp-Data_conversion_to_arrays/: 1.1-chp-data_conversion_to_arrays-Train-set.ipynb  1.2-chp-data_conversion_to_arrays-Validation-set.ipynb  1.3-chp-data_conversion_to_arrays-Test_set.ipynb
