[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zebra_fish_detection_and_tracking"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Himala Praharsha" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["zebra_fish_detection_and_tracking"]
force_sort_within_sections = true
